docs/kubernetes-manifests/antigenapp-prod-deployment-backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: antigen-prod-backend
  name: antigen-prod-backend
  namespace: antigenapp
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: antigen-prod-backend
  template:
    metadata:
      labels:
        k8s-app: antigen-prod-backend
    spec:
      containers:
        - image: ...
          imagePullPolicy: Always
          name: backend
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /api/
              port: 8080
              httpHeaders:
                - name: Host
                  value: ...
