docs/kubernetes-manifests/oauth2-proxy-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: antigenapp
spec:
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - env:
            - name: OAUTH2_PROXY_PROVIDER
              value: ...
            - name: OAUTH2_PROXY_CLIENT_ID
              value: antigen-app
            - name: OAUTH2_PROXY_EMAIL_DOMAINS
              value: "*"
            - name: OAUTH2_PROXY_OIDC_ISSUER_URL
              value: ...
            - name: OAUTH2_PROXY_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: credentials-oauth2-proxy
                  key: clientSecret
                  optional: false
            # docker run -ti --rm python:3-alpine python -c 'import secrets,base64; print(base64.b64encode(base64.b64encode(secrets.token_bytes(16))));'
            - name: OAUTH2_PROXY_COOKIE_SECRET
              valueFrom:
                secretKeyRef:
                  name: credentials-oauth2-proxy
                  key: cookieSecret
                  optional: false
            - name: OAUTH2_PROXY_HTTP_ADDRESS
              value: "0.0.0.0:4180"
            - name: OAUTH2_PROXY_WHITELIST_DOMAINS
              value: ...
            - name: OAUTH2_PROXY_PASS_ACCESS_TOKEN
              value: "true"
            - name: OAUTH2_PROXY_SET_XAUTHREQUEST
              value: "true"
            - name: OAUTH2_PROXY_ALLOWED_GROUPS
              value: ...
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.2.0
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
