docs/kubernetes-manifests/antigenapp-prod-svc-backend.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: antigen-prod-backend
  name: antigen-prod-backend
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    k8s-app: antigen-prod-backend
