docs/kubernetes-manifests/antigenapp-prod-svc-frontend.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: antigen-prod-frontend
  name: antigen-prod-frontend
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    k8s-app: antigen-prod-frontend
